<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#6CBD58"
        android:backgroundTintMode="screen"
        android:fontFamily="@font/vodkasansregular"
        android:paddingLeft="16dp"
        android:paddingTop="2dp"
        android:paddingRight="16dp"

        android:paddingBottom="2dp"
        android:scaleType="center"
        android:text="@string/Despertar"
        android:textSize="25sp"

        app:icon="@drawable/time"
        app:iconPadding="0dp"
        app:iconSize="35dp"

        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#6CBC58"

        android:textSize="25sp"


        android:fontFamily="@font/vodkasansregular"

        android:text="@string/desayunar"
        app:icon="@drawable/desayuno"
        app:iconPadding="0dp"

        app:iconSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="50dp"

        app:icon="@drawable/lunch"
        app:iconPadding="0dp"

        app:iconSize="35dp"
        android:textSize="25sp"

        android:fontFamily="@font/vodkasansregular"
        android:backgroundTint="#6CBC58"
        android:text="@string/almorzar"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="50dp"

        app:icon="@drawable/dinner"
        app:iconPadding="0dp"

        android:textSize="25sp"
        app:iconSize="35dp"

        android:fontFamily="@font/vodkasansregular"
        android:backgroundTint="#6CBC58"
        android:text="@string/cenar"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#6CBC58"
        android:fontFamily="@font/vodkasansregular"
        android:text="@string/merienda"

        android:textSize="25sp"
        app:icon="@drawable/hotfood"

        app:iconPadding="0dp"
        app:iconSize="35dp"

        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#6CBC58"
        android:text="@string/taller"
        app:layout_constraintBottom_toTopOf="@+id/button7"

        app:icon="@drawable/lista"
        app:iconPadding="0dp"

        android:textSize="25sp"
        app:iconSize="35dp"

        android:fontFamily="@font/vodkasansregular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#6CBC58"
        android:fontFamily="@font/vodkasansregular"
        android:text="@string/clase"

        android:textColorLink="#FAF1F1"
        android:textSize="25sp"

        app:icon="@drawable/presentacion"

        app:iconPadding="0dp"
        app:iconSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#6CBC58"
        android:text="@string/dormir"

        app:icon="@drawable/dormir"
        app:iconPadding="0dp"

        android:textSize="25sp"
        app:iconSize="35dp"

        android:fontFamily="@font/vodkasansregular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="94dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icono_saludarte" />


    <Button
        android:id="@+id/setting_button"
        android:layout_width="79dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/settings"
        android:scaleType="centerCrop"
        app:icon="@drawable/configuraciones"
        app:iconSize="35dp"
        app:iconTint="#6CBC58"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:tint="#6CBC58" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="84dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/settings"
        android:scaleType="centerCrop"
        app:icon="@drawable/recargar"
        app:iconSize="35dp"
        app:iconTint="#6CBC58"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6CBC58"
        android:text="@string/ayuda"

        android:fontFamily="@font/vodkasansregular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>