<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="369dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="602dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vodkasansregular"
            android:hint="@string/ingrese_ip" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button10"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="305dp"
        android:text="@string/volver"
        android:backgroundTint="#6CBD58"
        android:backgroundTintMode="screen"
        android:fontFamily="@font/vodkasansregular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="17dp"
        android:text="@string/conectar"
        android:backgroundTint="#6CBD58"
        android:backgroundTintMode="screen"
        android:fontFamily="@font/vodkasansregular"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="162dp"
        android:text="@string/configuraci_n_por_defecto"
        android:backgroundTint="#6CBD58"
        android:backgroundTintMode="screen"
        android:fontFamily="@font/vodkasansregular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />
</androidx.constraintlayout.widget.ConstraintLayout>